# karros-backend

./: .env  .env-example  .pre-commit-config.yaml  LICENSE  README.md  db.sqlite3  pyproject.toml  requirements.txt
backend/: settings.py  urls.py
backend/api/: urls.py
backend/api/factories/: urls.py
backend/api/factories/serializers/: __init__.py  brand_serializer.py  color_serializer.py  model_serializer.py
backend/api/factories/views/: __init__.py  brand_list_api_view.py  color_list_api_view.py  model_list_api_view.py
backend/api/me/: urls.py
backend/api/me/serializers/: __init__.py  me_serializer.py
backend/api/me/views/: __init__.py  me_retrieve_api_view.py
backend/api/stores/: urls.py
backend/api/stores/serializes/: __init__.py  vehicle_serializer_request.py  vehicle_serializer_response.py
backend/api/stores/views/: __init__.py  vehicle_all_list_api_view.py  vehicle_all_retrieve_api_view.py  vehicle_user_create_api_view.py  vehicle_user_delete_api_view.py  vehicle_user_list_api_view.py  vehicle_user_update_api_view.py
backend/core/: admin.py  models.py  storages.py
backend/factories/: admin.py  apps.py
backend/factories/migrations/: 0001_initial.py  0002_color_model.py
backend/factories/models/: __init__.py  brand.py  color.py  model.py
backend/stores/: admin.py  apps.py
backend/stores/migrations/: 0001_initial.py  0002_alter_vehicle_image.py  0003_alter_vehicle_image.py  0004_alter_vehicle_year.py
backend/stores/models/: __init__.py  vehicle.py
backend/tests/factories/: a.py  test_create_brand.py
backend/users/: admin.py
backend/users/migrations/: 0001_initial.py
backend/users/models/: jwt_token.py  user.py
docs/: deploy.md  dev.md  history.md  test.md
