[tool.poetry]
name = "karros-backend"
version = "0.1.0"
description = ""
authors = ["catalunha <catalunha.mj@gmail.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.black]
max_line_length = 100
target-version = ["py312"]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501", "E741"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]


[tool.poetry.dependencies]
python = "3.12"
django = "^5.0.7"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^10.4.0"
python-decouple = "^3.8"
dj-database-url = "^2.2.0"
django-cors-headers = "^4.4.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
django-storages = {extras = ["s3"], version = "^1.14.4"}
drf-spectacular = "^0.27.2"
boto3 = "^1.34.153"
django-filter = "^24.3"
django-imagekit = "^5.0.0"


[tool.poetry.group.dev.dependencies]
model-bakery = "^1.19.5"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
